@@ -8,6 +8,8 @@ v6.3.0-git
 v6.2.1
 ------
 
+[mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome
+      and IE.
 [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug
       #13281).
 
